优化配置、初始化和全局常量

--- a/config.yaml
+++ b/config.yaml
@@ -1,32 +1,27 @@
-# github.com/flipped-aurora/gin-vue-admin/server Global Configuration
-
-# redis configuration
 redis:
   db: 0
   addr: 127.0.0.1:6379
   password: "123456"
 
-# system configuration
 system:
-  env: public # Change to "develop" to skip authentication for development mode
+  env: public
   addr: 8080
-  db-type: mysql
-  #  路由全局前缀
-  router-prefix: ""
-# mysql connect configuration
-# 未初始化之前请勿手动修改数据库信息！！！如果一定要手动初始化请看（https://gin-vue-admin.com/docs/first_master）
+  dbType: mysql
+  routerPrefix: ""
+
 mysql:
   path: "202.23.32.1"
   port: "3306"
   config: "parseTime=True"
-  db-name: "keep_account"
+  dbName: "keep_account"
   username: "root"
   password: "123456"
-  log-mode: ""
+  logMode: ""
 
 captcha:
-  key-long: 6
-  img-width: 240
-  img-height: 80
-  open-captcha: 0 # 0代表一直开启，大于0代表限制次数
-  open-captcha-timeout: 3600 # open-captcha大于0时才生效
+  keyLong: 6
+  imgWidth: 240
+  imgHeight: 80
+  openCaptcha: 0
+  openCaptchaTimeout: 3600
+
