--- a/docker/Dockerfile.build
+++ b/docker/Dockerfile.build
@@ -1,4 +1,4 @@
-FROM golang:1.23-alpine
+FROM golang:1.23-alpine AS builder
 
 ENV GO111MODULE=on
 ENV GOPROXY=https://goproxy.io,direct
@@ -14,6 +14,14 @@ COPY . .
 
 RUN go build -o leapledger
 
+FROM alpine:3.20.3
+
+ENV TZ=Asia/Shanghai
+
+WORKDIR /app
+
+COPY --from=builder /go/LeapLedger/leapledger /app/leapledger
+
 EXPOSE 8080
 
-CMD ["/bin/sh", "-c", "./leapledger"]
+CMD ["./leapledger"]
