--- a/.github/workflows/develop-CI.yml
+++ b/.github/workflows/develop-CI.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           name: coverage-report
           path: docs/coverage.html
-
+          
       - name: Execute updateDocs.sh in container
         run: docker exec leap-ledger-server sh "./docs/updateDocs.sh"
 
@@ -53,7 +53,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/docs.go docs/swagger.json docs/swagger.yaml
+          git add -u docs/docs.go docs/swagger.json docs/swagger.yaml
           if git diff-index --quiet HEAD --; then
             echo "No changes to commit."
           else
@@ -64,6 +64,7 @@ jobs:
       - name: Docker Compose Down
         run: |
           docker-compose -f docker-compose.yaml down
+
   push-image:
     runs-on: ubuntu-latest
     needs: test-and-update-docs
