--- a/.github/workflows/develop-CI.yml
+++ b/.github/workflows/develop-CI.yml
@@ -57,7 +57,7 @@ jobs:
           if git diff-index --quiet HEAD --; then
             echo "No changes to commit."
           else
-            git commit -m "update docs"
+            git commit -m "update docs" || echo "No changes to commit."
             git push origin ${{ github.ref }}
           fi
 
