--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,16 @@
 # 服务初始化的配置文件 执行代码详见 ./initialize/initialize.go
 # This is the service initialization configuration file execution code see ./initialize/initialize.go
+
+# Production mode reduces some logging and closes the interface documentation api
 Mode: debug
 
 System:
   Addr: 8080
   RouterPrefix: ""
-  JwtKey:
+  JwtKey: ""
+  # Some apis use symmetric signature keys that can be configured to improve security
+  ClientSignKey: ""
+  
 Redis:
   Addr: "leap-ledger-redis:6379"
   Password: ""
