--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -6,18 +6,15 @@ ENV TZ=Asia/Shanghai
 
 WORKDIR /go/LeapLedger
 
-RUN sed -i 's#https\?://dl-cdn.alpinelinux.org/alpine#https://mirrors.tuna.tsinghua.edu.cn/alpine#g' /etc/apk/repositories
+#RUN sed -i 's#https\?://dl-cdn.alpinelinux.org/alpine#https://mirrors.tuna.tsinghua.edu.cn/alpine#g' /etc/apk/repositories
 RUN apk update && apk add build-base && apk add gcc
 
 COPY go.mod go.mod
 COPY go.sum go.sum
 RUN go mod download
 
+RUN go install gotest.tools/gotestsum@latest
+
 COPY . .
 
-RUN go build -o leapledger
-
-
-EXPOSE 8080
-
-CMD ["/bin/sh", "-c", "./leapledger"]
+CMD ["gotestsum", "--junitfile", "docs/junit.xml"]
