--- a/.github/workflows/develop-CI.yml
+++ b/.github/workflows/develop-CI.yml
@@ -1,4 +1,4 @@
-name: develop CI
+name: Develop CI
 
 on:
   workflow_dispatch:
@@ -7,81 +7,15 @@ on:
 
 jobs:
   test-and-update-docs:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build image
-        run: |
-          docker build -t xiaozirun/leap-ledger:latest -f docker/Dockerfile .
-
-      - name: Set up Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-
-      - name: Start server
-        run: |
-          docker-compose -f docker-compose.yaml up -d leap-ledger-mysql && docker-compose -f docker-compose.yaml up -d
-
-      - name: Run tests and make report
-        run: |
-          docker exec leap-ledger-server sh -c "go install github.com/jstemmer/go-junit-report@latest"
-          docker exec leap-ledger-server sh -c "go test -v 2>&1 ./... -coverprofile=docs/coverage.out | go-junit-report > docs/test-report.xml"
-          docker exec leap-ledger-server sh -c "go tool cover -html=docs/coverage.out -o docs/coverage.html"
-        continue-on-error: false
-
-      - name: Upload test-report.xml
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-report.xml
-          path: docs/test-report.xml
-
-      - name: Upload coverage.html
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: docs/coverage.html
-          
-      - name: Execute updateDocs.sh in container
-        run: docker exec leap-ledger-server sh "./docs/updateDocs.sh"
-
-      - name: Commit and push changes
-        # https://github.com/actions/checkout/discussions/479
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add -u docs/docs.go docs/swagger.json docs/swagger.yaml
-          if git diff-index --quiet HEAD --; then
-            echo "No changes to commit."
-          else
-            git commit -m "update docs" || echo "No changes to commit."
-            git push origin ${{ github.ref }}
-          fi
-
-      - name: Docker Compose Down
-        run: |
-          docker-compose -f docker-compose.yaml down
+    uses: ./.github/workflows/common-test-and-update-docs.yml
+    with:
+      ref: ${{ github.ref }}
 
   push-image:
-    runs-on: ubuntu-latest
     needs: test-and-update-docs
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: docker/Dockerfile.build
-          push: true
-          tags: xiaozirun/leap-ledger:${{ github.ref_name }}
+    uses: ./.github/workflows/common-push-image.yml
+    with:
+      tag: ${{ github.ref_name }}
+    secrets:
+      DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+      DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
