--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,7 +10,9 @@ jobs:
     uses: ./.github/workflows/common-test-and-update-docs.yml
     with:
       ref: ${{ github.ref }}
-
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+  
   push-image:
     needs: test-and-update-docs
     uses: ./.github/workflows/common-push-image.yml
